[gd_scene load_steps=32 format=3 uid="uid://ke3muiiqgpcu"]

[ext_resource type="Texture2D" uid="uid://bh20llck6qa1k" path="res://Non_Entity/Stations/interactables.png" id="2_culf3"]
[ext_resource type="Script" path="res://Non_Entity/Items/item.gd" id="2_uf2dp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y505a"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1logx"]
atlas = ExtResource("2_culf3")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tc0d"]
atlas = ExtResource("2_culf3")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exbkd"]
atlas = ExtResource("2_culf3")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yccjq"]
atlas = ExtResource("2_culf3")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_61jgl"]
atlas = ExtResource("2_culf3")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ihi"]
atlas = ExtResource("2_culf3")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aprg7"]
atlas = ExtResource("2_culf3")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_14k67"]
atlas = ExtResource("2_culf3")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34jv"]
atlas = ExtResource("2_culf3")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6frd"]
atlas = ExtResource("2_culf3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvlq6"]
atlas = ExtResource("2_culf3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5eu8"]
atlas = ExtResource("2_culf3")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fsp0"]
atlas = ExtResource("2_culf3")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pejw8"]
atlas = ExtResource("2_culf3")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc2k8"]
atlas = ExtResource("2_culf3")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_chneq"]
atlas = ExtResource("2_culf3")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_faurs"]
atlas = ExtResource("2_culf3")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70oa8"]
atlas = ExtResource("2_culf3")
region = Rect2(48, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g25tm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1logx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tc0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exbkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yccjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61jgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ihi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aprg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14k67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34jv")
}],
"loop": false,
"name": &"bowl_regular",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6frd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvlq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5eu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fsp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pejw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc2k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chneq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faurs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70oa8")
}],
"loop": false,
"name": &"bowl_super",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_1i3r6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ii7x7"]
resource_name = "glow"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xau5i"]
resource_name = "unglow"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkevx"]
_data = {
"RESET": SubResource("Animation_1i3r6"),
"glow": SubResource("Animation_ii7x7"),
"unglow": SubResource("Animation_xau5i")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_oumwb"]
radius = 8.0

[sub_resource type="Animation" id="Animation_wk5me"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemShadow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemGlow:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_xjjj5"]
resource_name = "pickup"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemGlow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -6)]
}

[sub_resource type="Animation" id="Animation_e8d4a"]
resource_name = "putdown"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemGlow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1a6s"]
_data = {
"RESET": SubResource("Animation_wk5me"),
"pickup": SubResource("Animation_xjjj5"),
"putdown": SubResource("Animation_e8d4a")
}

[node name="Item" type="RigidBody2D"]
y_sort_enabled = true
collision_layer = 32
collision_mask = 33
mass = 10.0
lock_rotation = true
linear_damp = 2.0
script = ExtResource("2_uf2dp")

[node name="ItemCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y505a")

[node name="ItemShadow" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.407843)
y_sort_enabled = true
speed_scale = 0.0
offset = Vector2(0, -3)

[node name="ItemGlow" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_g25tm")
animation = &"bowl_regular"
speed_scale = 0.0
offset = Vector2(0, -3)

[node name="GlowAnimation" type="AnimationPlayer" parent="ItemGlow"]
libraries = {
"": SubResource("AnimationLibrary_kkevx")
}
playback_auto_capture_transition_type = 1
playback_auto_capture_ease_type = 3
playback_default_blend_time = 0.1

[node name="ItemSprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_g25tm")
animation = &"bowl_regular"
frame = 1
speed_scale = 0.0
offset = Vector2(0, -3)

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="PickupCollision" type="CollisionShape2D" parent="PickupArea"]
modulate = Color(1, 1, 1, 0.788235)
y_sort_enabled = true
shape = SubResource("CircleShape2D_oumwb")
one_way_collision_margin = 3.0
debug_color = Color(0.0588235, 0.65098, 0, 0.196078)

[node name="ItemAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m1a6s")
}
playback_auto_capture_transition_type = 4
playback_default_blend_time = 0.5
